<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PSI Suite</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label" tools:keep="@string/first_fragment_label">First Fragment</string>
    <string name="second_fragment_label" tools:keep="@string/second_fragment_label">Second Fragment</string>
    <string name="next" tools:keep="@string/next">Next</string>
    <string name="previous" tools:keep="@string/previous">Previous</string>
    <string name="lorem_ipsum" tools:keep="@string/lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="actions_string">Actions</string>
    <string name="large_msg_string" tools:keep="@string/large_msg_string">Send large message (10MB)</string>
    <string name="small_msg_string" tools:keep="@string/small_msg_string"><![CDATA[Send small file (<1MB)]]></string>
    <string name="connect_string" tools:keep="@string/connect_string">Connect to the network</string>
    <string name="disconnect_string" tools:keep="@string/disconnect_string">Disconnect from the network</string>
    <string name="network_string">Not connected to the network\n</string>
    <string name="details_string">Details</string>
    <string name="hide_device_string">Hide</string>
    <string name="device_specific_actions_string">Device specific actions</string>
    <string name="network_status_connecting_string">Network status: connecting...</string>
    <string name="ip_port_string"><b><i>Network ID: Couldn\'t fetch your ID</i></b></string>
    <string name="port_string">Network port: -</string>
    <string name="ping_string">Ping</string>
    <string name="no_devices_string">No devices were added or the node is not running</string>
    <string name="find_intersection">Find intersection - Paillier</string>
    <string name="find_intersection_ElGamal" tools:keep="@string/find_intersection_ElGamal">Find intersection - ElGamal</string>
    <string name="intersect_everyone_paillier" tools:keep="@string/intersect_everyone_paillier">Find every intersection - Paillier</string>
    <string name="intersect_everyone_ElGamal" tools:keep="@string/intersect_everyone_ElGamal">Find every intersection - ElGamal</string>
    <string name="my_keys">My keys</string>
    <string name="results">Results</string>
    <string name="my_dataset">My dataset</string>
    <string name="keys">Numeric value of the keys</string>
    <string name="go_back">Return</string>
    <string name="connect_specific_peer">Connect to a peer</string>
    <string name="no_peers_string" tools:keep="@string/no_peers_string">No peers were found on this network</string>
    <string name="discover_peers">Discover peers</string>
    <string name="gen_keys">Generate new keys</string>
    <string name="actions_for_device">Actions for device %1$s</string>
    <string name="intersect_everyone_DamgardJurik" tools:keep="@string/intersect_everyone_DamgardJurik">Find every intersection - Damgard Jurik</string>
    <string name="find_intersection_DamgardJurik">Find intersection - Damgard Jurik</string>
    <string name="find_cardinality_paillier">Cardinality - Paillier</string>
    <string name="find_cardinality_DamgardJurik">Cardinality - Damgard Jurik</string>
    <string name="find_intersection_ope">Find intersection - Paillier OPE</string>
    <string name="find_intersection_dj_ope">Find intersection - Damgard Jurik OPE</string>
    <string name="intersect_everyone_paillier_ope" tools:keep="@string/intersect_everyone_paillier_ope">Find every intersection - Paillier OPE</string>
    <string name="intersect_everyone_dj_ope" tools:keep="@string/intersect_everyone_dj_ope">Find every intersection - Damgard Jurik OPE</string>
    <string name="network_id">Network ID: %1$s</string>
    <string name="network_port">Network port: %1$s</string>
    <string name="network_status">Network status: %1$s</string>
    <string name="change_setup">Modify domain and set</string>
    <string name="domain_size">Tamaño del Dominio</string>
    <string name="domain_zie_1">Introduce el tamaño del dominio</string>
    <string name="set_size">Tamaño del Set</string>
    <string name="set_size_1">Introduce el tamaño del set</string>
    <string name="launch_test">Launch test</string>
    <string name="dataset">Dataset</string>
    <string name="dataset_res">Dataset: %1$s</string>
    <string name="results_ac">Results</string>
    <string name="results_ac_res">Results: %1$s</string>
    <string name="keys_ac">Public Keys</string>
    <string name="disconnecting_from_the_peers" tools:keep="@string/disconnecting_from_the_peers">Disconnecting from the peers</string>
    <string name="added_peer">Trying to send a discover message to peer %1$s</string>
    <string name="cancel_str">Cancel</string>
    <string name="discovering_peers">Discovering peers...</string>
    <string name="peer_list_updated">Peer list updated</string>
    <string name="choose_encryption_scheme" tools:keep="@string/choose_encryption_scheme">Choose encryption scheme</string>
    <string name="selection_scheme_str" tools:keep="@string/selection_scheme_str">Choose the encryption scheme you need new keys for</string>
    <string name="paillier" tools:keep="@string/paillier">Paillier</string>
    <string name="damgard_jurik" tools:keep="@string/damgard_jurik">Damgard Jurik</string>
    <string name="network_settings">Network settings</string>
    <string name="new_setup_domain_size_set_size">New setup: domain size %1$s, set size %2$s</string>
    <string name="new_keys_are_being_generated">New %1$s keys are being generated, bit length %2$d</string>
    <string name="no_netowrk">Network is disconnected</string>
    <string name="node_started">The node is up and running</string>
    <string name="full_network_identifier">"Full network identifier: "</string>
    <string name="network_status_str">"\nNetwork status: "</string>
    <string name="add_specific_peer">Add a specific peer</string>
    <string name="add">Add</string>
    <string name="last_seen">"Last seen: "</string>
    <string name="ping_fail_str">%1$s - Ping FAIL - Device likely disconnected</string>
    <string name="finding_intersection_paillier">Finding intersection with %1$s using Paillier</string>
    <string name="finding_intersection_damgardjurik">Finding intersection with %1$s using DamgardJurik</string>
    <string name="finding_intersection_paillier_ope">Finding intersection with %1$s using Paillier OPE</string>
    <string name="finding_intersection_damgardjurik_ope">Finding intersection with %1$s using DamgardJurik OPE</string>
    <string name="cadinality_paillier">Finding cardinality of the intersection with %1$s using Paillier</string>
    <string name="cardinality_dj">Finding cardinality of the intersection with %1$s using DamgardJurik</string>
    <string name="test_launch_str">Launching test with %1$s - Check logs</string>
    <string name="implementation">Implementation</string>
    <string name="choose_implementation">Select an available cryptographic scheme</string>
    <string name="test_rounds">Test rounds</string>
    <string name="choose_type">Select the type of method to use</string>
    <string name="default_test" tools:keep="@string/default_test">Launch default test</string>
    <string name="select_implementation_and_test_rounds">Select implementation and test rounds</string>
    <string name="node_destroyed">Node destroyed</string>
    <string name="starting_node">Starting node</string>
    <string name="public_keys">Public Keys recovered:\n%1$s</string>
    <string name="empty_peer">You can\'t add nothing</string>
    <string name="cannot_add_yourself">You can\'t add yourself</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="node_not_initialized">Node not initialized</string>
    <string name="bit_length">Bit length</string>
    <string name="type_bit_length">Bit length of the generated keys</string>
    <string name="generate_keys">Generate new keys</string>
    <string name="generate">Generate</string>
    <string name="bit_length_must_be_a_number" tools:keep="@string/bit_length_must_be_a_number">THe bit length must be a number</string>
    <string name="bit_length_too_small">Minimum bit length is 16</string>
    <string name="ops_runnign_in_the_background">Ops running in the background</string>
    <string name="actions_done" tools:keep="@string/actions_done">All tasks were finished</string>
    <string name="all_tasks_string">No tasks pending</string>
    <string name="tasks_done">Tasks pending: %1$s</string>
    <string name="firebase_authenticated">Firebase authenticated - Logging data to the RTDB</string>
    <string name="start_node">Start node</string>
    <string name="destroy_node">Destroy node</string>
    <string name="fb_unauth">Disable Firebase logging</string>
</resources>