<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_string"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewFirebaseStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details_string"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actions_string"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_fingerprint_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonMyKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/my_keys" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_bookmark_border_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/results" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_data_object_24"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonDataSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/my_dataset" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_awesome_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonGenerateKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/gen_keys" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonAddPeer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/connect_specific_peer" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_connect_without_contact_24"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonDiscoverPeers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/discover_peers" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_mode_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonChangeSetup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/change_setup" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_cloud_queue_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/start_node" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_cloud_off_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:textColor="@color/white"
            android:layout_marginStart="2dp"
            android:text="@string/destroy_node" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_send_48"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/buttonFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/bluish"
            android:textColor="@color/white"
            android:text="@string/fb_unauth" />

    </LinearLayout>

</LinearLayout>